added routes,controller and model of users
